yamls/playce-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playce-cloud
  namespace: osci
  labels:
    app: playce-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playce-cloud
  template:
    metadata:
      labels:
        app: playce-cloud
    spec:
      containers:
      - name: playce-cloud
        image: 192.168.0.100:5000/osci/playce-cloud:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
