yamls/playce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playce-cloud
  namespace: osci
spec:
  type: ClusterIP
  selector:
    app: playce-cloud
  ports:
    - protocol: TCP
      port: 80
