yamls/playce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playce-cloud
  namespace: osci
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: playce-cloud.k8s.opensrc.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playce-cloud
            port:
              number: 80
